# anySerial

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
src/anyio_serial/: __init__.py  bsd.py  linux.py  posix.py
src/anyserial/: __about__.py  __init__.py  abstract.py  bsd.py  darwin.py  linux.py  posix.py
